fix horizontal scroll

--- a/estate-complexes-redesign/css/app.css
+++ b/estate-complexes-redesign/css/app.css
@@ -8931,6 +8931,7 @@ footer {
   grid-template-columns: 394px 1fr;
   gap: 20px;
   margin-bottom: 15px;
+  overflow: hidden;
 }
 @media (max-width: 1199px) {
   .rent-calendar {
