--- a/estate-complexes-redesign/css/rent-calendar.scss
+++ b/estate-complexes-redesign/css/rent-calendar.scss
@@ -3,6 +3,7 @@
   grid-template-columns: 394px 1fr;
   gap: 20px;
   margin-bottom: 15px;
+  overflow: hidden;
 
   @media (max-width: 1199px) {
     grid-template-columns: 300px 1fr;
